// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxDrawerBody customize 1`] = `
<div>
  <div
    class="drawer-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxDrawerBody component 1`] = `
<div>
  <div
    class="drawer-body"
  >
    Test
  </div>
</div>
`;
